package Model;

public enum Color {
    BLUE,
    RED,
    GREEN,
    YELLOW,
    ORANGE,
    PURPLE,
    PINK,
    GRAY,
    DEFAULT_COLOR
}
