package Model;

public interface MastermindGameObserver {

	public void updateHint(Hint hint);

}
