package Model;

public interface ShowHintStrategy {

	public Hint submitTry (Combination playerCombination, Combination secretCombination);

}
