package Model;

public enum HintSuccess {
    RightPositionColor,
    RightColor,
    False
}
